[package]
name = "ethp2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anvil-core = { git = "https://github.com/foundry-rs/foundry" }
foundry-config = { git = "https://github.com/foundry-rs/foundry" }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
bytes = { version = "1.1.0" }
serde = "1.0.137"
serde_json = "1.0.81"
fastrlp = { version = "0.1.2", features = ["alloc", "derive", "std"] }
ruint = { version = "1.3.0", features = ["fastrlp", "serde"] }
ethereum-forkid = "0.10.0"

# for display and tests
hex = "0.4.3"

[dev-dependencies]
hex-literal = "0.3.4"
