[package]
name = "ethp2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anvil-core = { git = "https://github.com/foundry-rs/foundry", features = ["fastrlp", "serde"]}
foundry-config = { git = "https://github.com/foundry-rs/foundry" }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
bytes = { version = "1.1.0" }
serde = "1.0.137"
serde_json = "1.0.81"
open-fastrlp = { version = "0.1.2", features = ["alloc", "derive", "std"] }

# for display and tests
hex = "0.4.3"
thiserror = "1.0.32"
crc = "1"
primitive-types = "0.12.1"
maplit = "1.0.2"

[dev-dependencies]
hex-literal = "0.3.4"

# temp
[patch.crates-io]
revm = { git = "https://github.com/onbjerg/revm", branch = "onbjerg/bytecode-hash" }
